# series-intro-recognizer

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  ReadMe.md  pyproject.toml  renovate.json  requirements-dev.txt
.github/workflows/: checks.yml  pr.yml  release.yml
scripts/runner/: Dockerfile  entrypoint.sh  run-runner-in-podman.ps1
series_intro_recognizer/: __init__.py  config.py
series_intro_recognizer/services/: best_offset_finder.py  offsets_calculator.py
tests/integration/: test_audio_files.py  test_audio_samples.py
tests/manual/: test_on_files.py
tests/manual/audio_files/: extract_and_crop.sh
tests/services/: test_best_offset_finder.py  test_offsets_calculator.py
