[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "series-intro-recognizer"
dynamic = ["version"]
authors = [
    { name = "HRAshton" },
]
description = "Find the intro of episodes of a series"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "librosa>=0.10.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "soundfile>=0.12.1",
    "pytest>=8.1.1",
]

[project.urls]
Homepage = "https://github.com/HRAshton/series-intro-recognizer"
Documentation = "https://github.com/HRAshton/series-intro-recognizer/wiki"
Issues = "https://github.com/HRAshton/series-intro-recognizer/issues"

[tool.setuptools.package-data]
"series_intro_recognizer" = ["py.typed"]

[tool.setuptools_scm]
version_file = "series_intro_recognizer/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=series_intro_recognizer",
    "--cov-report=xml",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
